add auth with fingerprint

--- a/app.json
+++ b/app.json
@@ -15,6 +15,13 @@
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "plugins": [
+      [
+        "expo-local-authentication", {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ]
+    ]
   }
 }
