--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~49.0.15",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~11.4.0",
+    "expo-local-authentication": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "lodash": "~4.17.4",
     "native-base": "^3.4.28",
