--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "6.9.13",
     "@react-navigation/stack": "6.3.17",
+    "eas-cli": "^5.9.1",
     "expo": "~49.0.15",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~11.4.0",
